# protomd

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE.md  README.md  build.rs  cliff.toml  deny.toml  just.nu
src/: cli.rs  config.rs  config.toml  main.rs  resolver.rs  templates.rs
templates/: file.md.j2  message.md.j2  method.md.j2  package.md.j2  service.md.j2
tests/: cli_tests.rs
tests/cmd/: completion.toml  deprecated.toml  init.toml  init_existing.stderr  init_existing.toml  manpages.toml  multi_file_package.toml  schema.stdout  schema.toml  simple.toml  with_markdownlint.toml
tests/cmd/completion.out/: _protomd  _protomd.ps1  protomd.bash  protomd.elv  protomd.fish  protomd.nu
tests/cmd/custom_templates.in/: protomd.toml
tests/cmd/deprecated.in/: schema.proto
tests/cmd/deprecated.out/: markdown.sample.md
tests/cmd/init.out/: protomd.toml
tests/cmd/inner.in/: schema.proto
tests/cmd/inner.out/: markdown.sample.md
tests/cmd/manpages.out/: protomd-completion.1  protomd-init.1  protomd-manpages.1  protomd-schema.1  protomd-templates.1  protomd.1
tests/cmd/multi_file_package.in/: other.proto  schema.proto  types.proto
tests/cmd/multi_file_package.out/: markdown.sample.md
tests/cmd/simple.out/: markdown.sample.md
tests/cmd/with_frontmatter.in/: protomd.toml
tests/cmd/with_frontmatter.out/: markdown.sample.md
tests/cmd/with_markdownlint.in/: protomd.toml  schema.proto
tests/cmd/with_markdownlint.out/: markdown.sample.md
