[package]
name = "protomd"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
askama = "0.13.0"
clap = { version = "4.5.35", features = ["derive", "wrap_help"] }
confique = { version = "0.3.0", features = ["toml"] }
indexmap = "2.9.0"
itertools = "0.14.0"
log = "0.4.27"
parking_lot = "0.12.3"
protox = "0.7.2"
rayon = "1.10.0"
slug = "0.1.6"
unindent = "0.2.4"
walkdir = "2.5.0"

[dev-dependencies]
trycmd = "0.15.9"

[build-dependencies]
clap = { version = "4.5.35", features = ["derive"] }
clap_complete = "4.5.47"
clap_mangen = "0.2.26"

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
unstable_name_collisions = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
expect_used = "warn"
unwrap_used = "warn"
cast_sign_loss = "allow"

[profile.release]
lto = "thin"
strip = true
