[package]
name = "protomd"
version = "0.2.2"
authors = ["Dominik Nakamura <dnaka91@gmail.com"]
edition = "2024"
description = "Protobuf Markdown generator"
homepage = "https://forge.dnaka91.rocks/dnaka91/protomd"
repository = "https://forge.dnaka91.rocks/dnaka91/protomd"
license = "MIT"
keywords = ["protobuf", "markdown", "generator"]
categories = ["command-line-utilities", "development-tools", "visualization"]
include = ["src/**/*", "templates/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tzstd"
disabled-strategies = ["quick-install"]

[dependencies]
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
clap_complete = "4.5.60"
clap_complete_nushell = "4.5.10"
clap_mangen = "0.2.31"
config = { version = "0.15.19", default-features = false, features = ["convert-case", "toml"] }
indexmap = { version = "2.12.0", features = ["serde"] }
itertools = "0.14.0"
log = "0.4.28"
minijinja = { version = "2.12.0", features = ["loader", "preserve_order"] }
protox = "0.9.0"
rayon = "1.11.0"
schemars = { version = "1.1.0", features = ["indexmap2", "preserve_order"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slug = "0.1.6"
snafu = "0.8.9"
unindent = "0.2.4"
walkdir = "2.5.0"

[dev-dependencies]
trycmd = "0.15.10"

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
unstable_name_collisions = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
expect_used = "warn"
unwrap_used = "warn"
cast_sign_loss = "allow"

[profile.release]
lto = "thin"
strip = true
